@@ -28,7 +28,6 @@ import java.nio.channels.SeekableByteChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.regex.Pattern;
@@ -140,7 +139,7 @@ public abstract class ReplicationAPIBase extends JerseyResource {
       if (generation == -1) {
         commit = delPol.getAndSaveLatestCommit();
         if (null == commit) {
-          filesResponse.fileList = Collections.emptyList();
+          filesResponse.fileList = List.of();
           return filesResponse;
         }
       } else {
