@@ -20,6 +20,7 @@ package org.apache.solr.cloud;
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -106,8 +107,7 @@ public class NodeRolesTest extends SolrCloudTestCase {
       String path = nodenamePaths[i + 1];
       assertTrue(
           "Didn't find " + nodename + " at " + path + ". Full response: " + rsp.jsonStr(),
-          ((Collection) Objects.requireNonNullElse(rsp._get(path), Collections.emptyList()))
-              .contains(nodename));
+          ((Collection) Objects.requireNonNullElse(rsp._get(path), List.of())).contains(nodename));
     }
   }
 
